2009-04-21  Stephen Shaw  <sshaw@decriptor.com>

	* MainForm.cs: Disabled the check out button until a patron is
	  selected

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* MainForm.cs: Changed _selectedPatron from just an int to a
	  Patron object

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* MainForm.cs: Set date picker now
	Slight changes to the name search stuff now
	Fixed typo with media check in

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* MainForm: Added Name Search to the main form

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* Interfaces: Removed the DataAccess interface

	* librarysim.csproj: 

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* Entire App:  Changed tons of stuff.  The database
		schema doesn't have checkedin or reserved now
	* MainForm: Added lots of events and frontend to backend
		ties

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* MainForm: Added a selected Item event to the
		Patron ListView so that when its clicked
		the patron checked out ListView update
		both list and text
	* Events: Added an event to handle the patron
		selected is changed

2009-04-20  Stephen Shaw  <sshaw@decriptor.com>

	* MediaForm.cs: Minor change

	* MainForm.cs: Built out some event stuff

2009-04-19  Stephen Shaw  <sshaw@decriptor.com>

	* librarysim: Fixed some resizing issues

2009-04-19  Stephen Shaw  <sshaw@decriptor.com>

	* librarysim: Revamped the gui a bit 

2009-04-18  Stephen Shaw  <sshaw@decriptor.com>

	* librarysim.csproj: 

2009-04-18  Stephen Shaw  <sshaw@decriptor.com>

	* Backend: Changed the directory from Databases to Backend. 

	* Databases: Changed to be Backend now

	* MediaForm.cs: Changed to the class required a change here to
	  make it compile

	* librarysim.csproj: 

2009-04-18  Stephen Shaw  <sshaw@decriptor.com>

	* ConfigEditor.cs: 
	* ConfigEditor.Designer.cs: 
	* ConfigEditor: Added a dialog for the config file
	* MainForm: Changed the name of the main form