@@ -132,7 +132,7 @@ namespace librarysim
                 {
                     _selectedPatron =  new Patrons(MC.GetPatron((patron as PatronsListViewItem).PatronID));
                     gb_PatronCheckedOut.Text = "Books and Media Checked Out by " + (patron as PatronsListViewItem).PatronName;
-                    MC.RefreshPatronCheckedOut(_selectedPatron.PatronID);                    
+                    MC.RefreshPatronCheckedOut(_selectedPatron.PatronID);                 
                 }
             }
         }
@@ -157,16 +157,17 @@ namespace librarysim
                             if ( _selectedPatron.Age == "child" && item.Type == "adult" ) 
                             {
                                 MessageBox.Show("Children cannot checkout Adult items. ");
-                                break;
                             }
-                            else if ( item.Checkedout != null )
-                            {
-                                MessageBox.Show("Book: " + item.Title + " is already checked out.");
-                                break;
-                            }
-                            MC.CheckOutBook((item as BooksListViewItem).BooksID, _selectedPatron.PatronID, _currentDate);
-                            MC.RefreshPatronCheckedOut(_selectedPatron.PatronID);
-                        }
+                            //else if ( item.Checkedout != DateTime.Parse(string.Empty) )
+                            //{
+                            //    MessageBox.Show("Book: " + item.Title + " is already checked out.");
+                            //}
+							else
+							{
+								MC.CheckOutBook((item as BooksListViewItem).BooksID, _selectedPatron.PatronID, _currentDate);
+								MC.RefreshPatronCheckedOut(_selectedPatron.PatronID);
+							}
+						}
                     }
                     if (Selected is MediaListViewItem)
                     {
